# voight_cluster

./: .gitignore  Caddyfile  README.md  me_node_diagnostic.txt  requirements.txt  setup_intranet.sh  zen_ctl.py  zen_kokoro_server.py  zen_kokoro_server.py.bak
kokoro/: README.md  setup_intranet.sh  zen-kokoro-node.service  zen_ctl.py  zen_kokoro_server.py
me_stream/: camera_stream.py  me_camera_stream_stable.py  me_node_server.py  requirements.txt
scripts/: copy_ssh_key_me.exp  recover_me_node.exp  start_me_node.exp
te_arm/: AnatomyGeometry-Full-GLB.glb  README.md  Skeleton.usdz  requirements.txt  setup_te_ros2.sh  te_arm_bridge.py  zen_te_server.py  zen_te_server_simple.py
te_arm/arduino/pin_probe/: pin_probe.ino
te_arm/arduino/simple_test/: simple_test.ino
te_arm/arduino/te_arm_firmware/: te_arm_firmware.ino
te_arm/arduino/te_simple_firmware/: te_simple_firmware.ino
te_arm/ros2_ws/src/te_arm/: CMakeLists.txt  package.xml
te_arm/ros2_ws/src/te_arm/config/: te_arm.rviz
te_arm/ros2_ws/src/te_arm/launch/: te_arm.launch.py  te_arm_rviz.launch.py
te_arm/ros2_ws/src/te_arm/scripts/: arm_controller_node.py  arm_teleop.py  joint_state_publisher.py
te_arm/ros2_ws/src/te_arm/te_arm/: __init__.py
te_arm/ros2_ws/src/te_arm/urdf/: te_arm.urdf
zen_stuff/: README.md  setup_ssh.sh  voight_ctl.py
zen_stuff/scripts/: copy_ssh_key_kokoro.exp  copy_ssh_key_te.exp  recover_kokoro_node.exp  recover_te_node.exp  start_kokoro_node.exp  start_te_node.exp  update_me_camera_res.exp
